ncc/testsuite/negative/void-parm2.n
module M {
  public Main () : void // OK
  {
    [()].Iter ( // E: void is not a subtype of System.Object
      fun (_) {
      }
    );

    // bug 628
    def f (_)
      {}

    [1,2].Map (f).ToString (" "); // E: cannot use `void' as a generic parameter of Nemerle.Core.list

    mutable q = 7;
    System.Console.WriteLine ("{0}", q++); // E: void is not a subtype of System.Object
  }
}
